--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <button class="btn reset">reset</button>
           <button class="btn increase">increase</button>
         </div>
+        <button id="flipper">flipper</button>
       </div>
     </main>
     <!-- javascript -->
